# shadoks-CGSHOP2026

./: CMakeLists.txt  README.md  center.hpp  crosslb.hpp  delaunay.hpp  distance.hpp  exact.cpp  graph.hpp  happy.cpp  improver.cpp  independent.hpp  instance.hpp  lb.txt  makelb.cpp  point.hpp  satcenter.hpp  satdistance.hpp  segment.hpp  solution.hpp  solver.cpp  tools.hpp  triangle.hpp  triangulation.hpp
lib/EvalMaxSAT/src/: cadicalinterface.h
